--- a/index.htm
+++ b/index.htm
@@ -141,6 +141,7 @@
         </div>
 
         <div class="summaryElements">
+            <h2>SUMMARY OF THE ELEMENT</h2>
             <p id="summ">Here will appear a little explanation of the diferents traits of the element that you choose</p>
         </div>
 
