Cambio de paleta y adicción de iconos

--- a/index.htm
+++ b/index.htm
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./src/tabla-periodica.png" type="image/x-icon">
     <title>Periodic Table</title>
 </head>
 <script src="./JS/mainOptimizado.js"></script>
 
 <body>
     <div class="header">
+        <img src="./src/logoTabla.png" alt="logoTabla" width="75px" height="75px">
         <h1>PERIODIC TABLE</h1>
     </div>
 
